# api_summarization

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: bdfba05e28b3_create_summaries_table.py
app/: main.py
app/dto/summary/: create_summary_request.py  create_summary_response.py  get_summary_response.py
app/models/: summary.py
app/routes/: __init__.py  router.py  summary.py
app/services/: container.py
app/services/language_models/: language_models.py
app/services/scrap/: scrap_service.py
app/services/summary/: summary.py  summary_repository.py
app/shared/databases/: connection.py
app/shared/requests/: requests.py
tests/: conftest.py
tests/routes/: test_create_summary.py  test_get_summary.py
tests/services/: test_language_models_service.py  test_scrap_service.py  test_summary_repository.py  test_summary_service.py
