[project]
name = "api-summarization"
version = "0.1.0"
description = ""
authors = [
    {name = "Lennon",email = "lennon.ribeiro@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "typing-inspect (>=0.9.0,<0.10.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "fastapi (>=0.115.0,<1.0.0)",
    "uvicorn[standard] (>=0.32.0,<1.0.0)",
    "alembic (>=1.17.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
